test/libsolidity/syntaxTests/natspec/docstring_private_state_variable.sol
contract C {
    /// @notice example of notice
    uint private state;
}
// ----
// DocstringParsingError 6546: (17-46): Documentation tag @notice not valid for non-public state variables.
